# BallKiller3000

./: .gitignore  CMakeLists.txt  README.md
.github/custom/online/: README.md  README.txt
.github/workflows/: build-beta.yml  build-release.yml  build.yml  cmake.yml  create-beta-release.yml  create-release.yml
old/: data.h  main.cpp  mainOLD.cpp  player.h
old/Ball/: IsBallInScreen.cpp  push.cpp
old/Enemy/: checkPlayerKill.cpp  givePreference.cpp
old/Score/: loadHigh.cpp
old/Unknown/: checkIfExtraLife.cpp
old/game/: finishLevel.cpp  startGame.cpp
src/: ball.cpp  ball.h  balls.cpp  balls.h  data.h  enemy.cpp  enemy.h  enemyAi.h  game.cpp  game.h  gameHandler.h  gui.h  main.cpp  player.cpp  player.h  pos.h  score.cpp  score.h  utils.h  version.h.in
src/Ball/: IsBallInScreen.cpp  kill.cpp
src/Enemy/: generateSize.cpp  initialize.cpp  kill.cpp  killPlayer.cpp  move.cpp
src/GameHandler/: endGame.cpp  highScore.cpp  levelUp.cpp  startGame.cpp
src/Gui/: controlStick.cpp  gameContent.cpp  gameGui.cpp  gameOver.cpp  pauseMenu.cpp  renderGui.cpp  resizeWindow.cpp  startScreen.cpp
src/Player/: kill.cpp  movePlayer.cpp
src/Score/: saveHigh.cpp
src/Unknown/: generateBallPos.cpp  loadHigh.cpp  randomPosGenerator.cpp
src/Util/: checkCollision.cpp  getNearest.cpp  isPosInScreen.cpp  posGenerator.cpp  random.cpp
src/enemy/: initialise.cpp  move.cpp
src/gameHandler/: highScore.cpp  levelUp.cpp  startGame.cpp
src/gui/: gameElements.cpp  gameOverScreen.cpp  gameOverlay.cpp  pauseMenu.cpp  renderGui.cpp  resizeWindow.cpp  settingsPage.cpp  startScreen.cpp
src/player/: AI.cpp  move.cpp  movePlayer.cpp
src/utils/: checkCollision.cpp  getNearest.cpp  random.cpp
